--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,42 @@
+commit 28ade0ae2f0237303ca188b62fdb2bd02486ec34
+Author: Alan Coopersmith <alan.coopersmith@oracle.com>
+Date:   Thu Feb 14 18:58:18 2019 -0800
+
+    xcursor-themes 1.0.6
+    
+    Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
+
+commit 9fefdbf23c5b8a083a3b65e7ad444eea9dbf2b35
+Author: Alan Coopersmith <alan.coopersmith@oracle.com>
+Date:   Sun Nov 25 12:41:32 2018 -0800
+
+    Update configure.ac bug URL for gitlab migration
+    
+    Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
+
+commit 103e7873fac379cde36611dee92f8a4cb6678da7
+Author: Alan Coopersmith <alan.coopersmith@oracle.com>
+Date:   Fri Nov 16 23:36:41 2018 -0800
+
+    Update README for gitlab migration
+    
+    Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
+
+commit 96eb894910cf79ebbc29b650ee1c752bc2a379f6
+Author: Paul Hebble <pjhebble@gmail.com>
+Date:   Sat Oct 13 18:30:19 2018 -0500
+
+    Add missing symlinks for whiteglass
+    
+    GNOME Shell crashes if your active cursor theme doesn't have a dnd-none
+    cursor and you click and drag a window in the overview screen.
+    
+    This patch adds a symlink to fleur for the dnd-none cursor of
+    whiteglass. Similarly for hand, hand1, and hand2 which are used by some
+    browsers.
+    
+    Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>
+
 commit e5bf0229d785b83344c6e6b79ff40d399d2cdcd0
 Author: Alan Coopersmith <alan.coopersmith@oracle.com>
 Date:   Fri Mar 9 22:57:33 2018 -0800
